http://bugzilla.liquidsys.com/show_bug.cgi?id=4464 bug: 4464 + make dlview scroll when the browser is too small.

--- a/ZimbraWebClient/WebRoot/js/zimbraAdmin/config/style/zmadmin.css
+++ b/ZimbraWebClient/WebRoot/js/zimbraAdmin/config/style/zmadmin.css
@@ -446,6 +446,7 @@ P, TD, DIV, SPAN, SELECT, INPUT, TEXTAREA, BUTTON {
 /** distribution list stuff **/
 .ZaDLView {
   background-color:#EEEEEE;
+  overflow:auto;
 }
 
 .DLSource, .DLTarget { 
